--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@whiskeysockets/baileys": "^6.17.16",
     "express": "^4.18.2",
     "pino": "^8.18.0",
-    "qrcode": "^1.5.1",
+    "qrcode-terminal": "^0.12.0",
+    "chalk": "^5.3.0",
     "tar": "^6.1.11"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
