--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "psycho-bot",
   "version": "1.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "start": "node index.cjs"
+    "start": "node index.mjs"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.17.16",
     "express": "^4.18.2",
     "pino": "^8.18.0",
-    "qrcode-terminal": "^0.12.0",
-    "chalk": "^5.3.0",
-    "tar": "^6.1.11"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "qrcode": "^1.5.1",
+    "tar": "^6.1.11",
+    "chalk": "^5.3.0"
   }
 }
